--- a/AngularAssignment-Coffee/angular.json
+++ b/AngularAssignment-Coffee/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AngularAssignment-Coffe": {
+    "AngularAssignment-Coffee": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,21 +20,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-assignment-coffe",
+            "outputPath": "dist/angular-assignment-coffee",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ], 
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
-  "node_modules/primeng/resources/primeng.min.css",
-  "node_modules/primeicons/primeicons.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
@@ -75,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "AngularAssignment-Coffe:build:production"
+              "browserTarget": "AngularAssignment-Coffee:build:production"
             },
             "development": {
-              "browserTarget": "AngularAssignment-Coffe:build:development"
+              "browserTarget": "AngularAssignment-Coffee:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -86,7 +83,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AngularAssignment-Coffe:build"
+            "browserTarget": "AngularAssignment-Coffee:build"
           }
         },
         "test": {
@@ -97,18 +94,13 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
       }
     }
   },
-  "defaultProject": "AngularAssignment-Coffe"
+  "defaultProject": "AngularAssignment-Coffee"
 }
